--- a/sitio/src/views/detail.ejs
+++ b/sitio/src/views/detail.ejs
@@ -33,7 +33,7 @@
                     </div>
                     <!-- I m a g e n    p r i n c i p a l -->
                     <div class="contenedora-img-principal">
-                        <img class="imagen-principal" src="<%= producto.images[0] %>" alt="">
+                        <img class="imagen-principal" src="/images/<%= producto.images[0] %>" alt="">
                     </div>
                     <!-- N o m b r e    p r o d u c t o -->
                     <div class="contenedora-product-descrip mb-3">
