--- a/sitio/src/views/productAdd.ejs
+++ b/sitio/src/views/productAdd.ejs
@@ -19,14 +19,17 @@
                   </div>
                   <div class = "mb-3">
                     <label for="productImagen" class = "form-label">Imagen</label>
-                    <input type="file" class ="form control" id = "productImagen" name = "image">
+                    <input type="file" class ="form control" id = "productImagen" name = "images" multiple>
                 </div>
                 <div class="mb-3 categorias">
                 <label for="category" class="form-label">Categoría</label>
                 <select name="category" id="category" >
-                <option value="tazas">Tazas</option>
+                <option value="accesorios">Accesorios</option>
+                <option value="cartucheras">Cartucheras</option>
                 <option value="figuras">Figuras</option>
                 <option value="mangas">Mangas</option>
+                <option value="mochilas">Mochilas y Bolsos</option>
+                <option value="tazas">Tazas</option>
               </select>
                 </div>
                 <div class="mb-3 categorias">
@@ -35,6 +38,7 @@
                 <option value="red"> Rojo </option>
                 <option value="blue">Azul </option>
                 <option value="black">Negro</option>
+                <option value="sincolor">Sin color</option>
               </select>
                 </div>
                   <div class="mb-3">
