--- a/sitio/public/stylesheets/resultSearch.css
+++ b/sitio/public/stylesheets/resultSearch.css
@@ -1,5 +1,5 @@
 .containerSearch {
-  width: 300px;
+  width: 90%;
   background: #ffffff;
   padding: 30px;
   margin: 2em auto;  
@@ -72,7 +72,7 @@
 @media(min-width:510px){
 
   .containerSearch {
-    width: 400px;
+    width: 90%;
     background: #ffffff;
     padding: 30px;
     margin: 2em auto;  
@@ -93,7 +93,7 @@
 @media(min-width:768px){
 
   .containerSearch {
-    width: 700px;
+    width: 90%;
     background: #ffffff;
     padding: 30px;
     margin: 2em auto;  
