--- a/sitio/src/views/resultSearch.ejs
+++ b/sitio/src/views/resultSearch.ejs
@@ -20,7 +20,7 @@
 						<% result.forEach(producto=> { %>
 							<article class="product">
 								<a href="/products/detail/<%= producto.id %>">
-									<img class="img-product" src="<%= producto.image %> " alt="">
+									<img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
 									<div class="product-description">
 										<h3 class="name-product">
 											<%= producto.name %>
