--- a/sitio/public/stylesheets/resultSearch.css
+++ b/sitio/public/stylesheets/resultSearch.css
@@ -10,7 +10,14 @@
   box-shadow: 7px 13px 37px #000;
 }
 
-
+.img-product{
+  object-fit: contain;
+  display: block;
+  width: 100%;
+  height:300px;
+  background-color: #ffffff;
+  border:1px #000 solid;
+}
 
 /*---------GALERIA DE PRODUCTOS---------*/
 
