--- a/sitio/src/views/listaProductsAdmin.ejs
+++ b/sitio/src/views/listaProductsAdmin.ejs
@@ -10,7 +10,13 @@
         <%- include('./partials/header.ejs') %>
 
     <main class = "main">
-    <h3 class = "tituloAdmin">Bienvenido al Modulo Admintrador!!!</h3>
+    <h3 class = "tituloAdmin">Bienvenido al módulo administrador</h3>
+
+    <div class="buttonAdd">
+        <a href="/products/add" class="action-buttonAdd"><i class="far fa-plus-square"></i> Agregar producto</a>
+    </div>
+
+    
     <table class = "tablaProducts">
     <thead>
         <tr>
