--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -20,7 +20,7 @@
                     <li><a href="/#" class="enlaces">Nosotros</a></li>
                     <li><a href="/#" class="enlaces">FAQ</a></li>
                     <ul class="enlaces-resp">
-                        <li><a href="/users/login" class="enlaces"><b>Iniciar sesión</b></a></li>
+                        <li><a href="/users/login" class="enlaces"><b>Iniciar sesiÃ³n</b></a></li>
                         <li><a href="/users/register" class="enlaces"><b>Registrate</b></a></li>
                         <li><a href="/users/cart" class="enlaces"><b>Carrito</b></a></li>
                     </ul>
