--- a/sitio/src/views/productAdd.ejs
+++ b/sitio/src/views/productAdd.ejs
@@ -9,20 +9,29 @@
         <div class="formulario mt-5">
           <h2>Agregar Producto</h2>
           
-            <form action="" method="POST" enctype="multipart/form-data">
+            <form action="/products/add" method="POST" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="formGroupExampleInput" class="form-label" >Nombre</label>
                     <input type="text" class="form-control" id="formGroupExampleInput" name="name">
+                    <%if (locals.errors && errors.name){%>
+                      <p style="color: red;"> <%=errors.name.msg%> </p>
+                  <%}%>
                   </div>
 
                   <div class="mb-3">
                     <label for="floatingTextarea">Descripción</label>
                     <textarea class="form-control" id="floatingTextarea" name="description"></textarea>
+                    <%if (locals.errors && errors.description){%>
+                      <p style="color: red;"> <%=errors.description.msg%> </p>
+                  <%}%>
                   </div>
 
                   <div class = "mb-3">
                     <label for="productImagen" class = "form-label">Imagen</label>
                     <input type="file" class ="form control" id = "productImagen" name = "images" multiple>
+                    <%if (locals.errors && errors.image){%>
+                      <p style="color: red;"> <%=errors.image.msg%> </p>
+                  <%}%>
                 </div>
 
                 <div class="mb-3 categorias">
@@ -35,6 +44,9 @@
                 <option value="mochilas">Mochilas y Bolsos</option>
                 <option value="tazas">Tazas</option>
               </select>
+              <%if (locals.errors && errors.category){%>
+                <p style="color: red;"> <%=errors.category.msg%> </p>
+            <%}%>
                 </div>
 
                 <div class="mb-3 categorias">
@@ -45,16 +57,25 @@
                 <option value="black">Negro</option>
                 <option value="sincolor">Sin color</option>
               </select>
+              <%if (locals.errors && errors.colors){%>
+                <p style="color: red;"> <%=errors.colors.msg%> </p>
+            <%}%>
                 </div>
 
                   <div class="mb-3">
                     <label for="formGroupExampleInput2" class="form-label">Precio</label>
                     <input type="number" class="form-control" id="formGroupExampleInput2" name="price">
+                    <%if (locals.errors && errors.price){%>
+                      <p style="color: red;"> <%=errors.price.msg%> </p>
+                  <%}%>
                   </div>
 
                   <div class="mb-3">
                     <label for="formGroupExampleInput2" class="form-label">Cuotas</label>
                     <input type="number" class="form-control" id="formGroupExampleInput2" name="discount">
+                    <%if (locals.errors && errors.discount){%>
+                      <p style="color: red;"> <%=errors.discount.msg%> </p>
+                  <%}%>
                   </div>
                   
                   <button class="btn btn-primary" type="submit">Guardar</button>
