--- a/sitio/src/views/detail.ejs
+++ b/sitio/src/views/detail.ejs
@@ -27,13 +27,13 @@
                     <!-- M á s    i m a g e n e s    d e l   p r o d u c t o -->
 
                     <div class="contenedora-img-list">
-                        <% for( let index = 1; index < producto.images.length; index++ ) { %>
+                        <% for( let index = 0; index < producto.images.length; index++ ) { %>
                             <img onclick="document.getElementById('imagen-principal').setAttribute('src','/images/<%= producto.images[index] %>')" src="/images/<%= producto.images[index] %>" class="list">  
                         <% } %>
                     </div>
                     <!-- I m a g e n    p r i n c i p a l -->
                     <div class="contenedora-img-principal">
-                        <img class="imagen-principal" src="/images/<%= producto.images[0] %>" alt="">
+                        <img class="imagen-principal" id="imagen-principal" src="/images/<%= producto.images[0] %>" alt="">
                     </div>
                     <!-- N o m b r e    p r o d u c t o -->
                     <div class="contenedora-product-descrip mb-3">
