--- a/sitio/public/stylesheets/style.css
+++ b/sitio/public/stylesheets/style.css
@@ -9,3 +9,6 @@
 @import url('./productAdd.css');
 @import url('./listaProductsAdmin.css');
 @import url('./resultSearch.css');
+@import url('./glider.css');
+@import url('./editPerfil.css');
+@import url('./error.css');
