--- a/sitio/src/views/categorias.ejs
+++ b/sitio/src/views/categorias.ejs
@@ -11,8 +11,7 @@
 
             <main class="main">
 
-                <h2 class=" titulo-Destacados">  Categorías </h2>
-                    <h3> <%= categoria.title %>  </h3>
+                <h2 class=" titulo-Destacados" style ="border-bottom: 1px solid gray; margin: 0px 75px;padding-bottom: 5px;">  Categoría <%= title%> </h2>
                 <!-- C a t e g o r i a s   P r o d u c t o s   -->
                 <section class="conteiner-products">
                      <% if (categoria === categoria) { %>
