--- a/sitio/src/views/error.ejs
+++ b/sitio/src/views/error.ejs
@@ -1,3 +1,8 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<div style = "padding: 30px;"class = "contenedor-error">
+    <h1 style = "font-family:arial"><%= message %></h1>
+    <img width="180px" height="130px"  src="/images/akamaru-baby.png" alt="">
+    <h2 style = "font-family:arial"><%= error.status %></h2>
+    <pre style = "font-family:arial"><%= error.stack %></pre>
+</div>
+
+
