--- a/sitio/src/views/login.ejs
+++ b/sitio/src/views/login.ejs
@@ -34,9 +34,9 @@
                         <span class="text-danger"> <%= locals.errores && errores.email ? errores.email.msg : null %>   </span>
                         <!-- RECORDAR USUARIO -->
                         <div class="form-check mb-3">
-                            <input type="checkbox" name="flexCheckChecked" class="form-check-input" value=""
-                                id="flexCheckChecked" checked>
-                            <label class="form-check-label" for="flexCheckChecked">
+                            <input type="checkbox" name="recordar" class="form-check-input" value="on"
+                                id="flexCheckChecked" >
+                            <label class="form-check-label" for="recordar">
                                 Recuerdame
                             </label>
                         </div>
