cambios en vistaSearch

--- a/sitio/src/views/resultSearch.ejs
+++ b/sitio/src/views/resultSearch.ejs
@@ -45,7 +45,7 @@
 					<section class="conteiner-products">
 						<% productos.forEach(producto=> { %>
 							<article class="product">
-								<a href="/products/detail/:id">
+								<a href="/products/detail/<%= producto.id %>">
 									<img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
 									<div class="product-description">
 										<h3 class="name-product">
