Update register y corrección de errores

--- a/sitio/src/views/register.ejs
+++ b/sitio/src/views/register.ejs
@@ -103,15 +103,15 @@
 
 
                     <!-- recaptcha -->
-                    <form action="?" method="POST">
+                    <!--  <form action="?" method="POST">
                         <div class="g-recaptcha" data-sitekey=" 6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
 
-                    </form>
+                    </form> -->
 
 
                     <!-- BOTON -->
                     <div>
-                        <button class="btn btn-primary btn-sm ">Registrarse</button>
+                        <button class="btn btn-primary btn-sm" type="submit">Registrarse</button>
 
                     </div>
 
