--- a/sitio/src/views/resultSearch.ejs
+++ b/sitio/src/views/resultSearch.ejs
@@ -10,13 +10,9 @@
  
  
 	 <main>
- 
-		 <section class="containerSearch">
-			<% if (result.length> 0) { %>
-				<h3>Resultados de la búsqueda: <%= search %>
-				</h3>
-				<table class="table">
-					<tbody>
+			<% if (result.length > 0) { %>
+				<h3 style="margin-left:80px;">Resultados de la búsqueda: <%= search %></h3>
+					<section class="conteiner-products">
 						<% result.forEach(producto=> { %>
 							<article class="product">
 								<a href="/products/detail/<%= producto.id %>">
@@ -34,16 +30,14 @@
 									</div>
 								</a>
 							</article>
-							<% }) %>
+						<% }) %>
+					</section>
 
-
-					</tbody>
-				</table>
 				<% } else{ %>
-					<h3>No hay resultado para la búsqueda: <%= search %>
+					<h3 style="margin-left:80px;">No hay resultado para la búsqueda: <%= search %>
 					</h3>
 					<section class="conteiner-products">
-						<% productos.forEach(producto=> { %>
+						<% result.forEach(producto => { %>
 							<article class="product">
 								<a href="/products/detail/<%= producto.id %>">
 									<img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
