correcion editUser,add vistaPerfil y rutas validadas

--- a/sitio/public/stylesheets/editPerfil.css
+++ b/sitio/public/stylesheets/editPerfil.css
@@ -113,6 +113,9 @@
 
 
 }
+.contenedor-boton button:hover{
+    background-color: #57595A;
+}
 .main span.mensaje-error-user{
     color:red;
     font-size: 14px;
