--- a/sitio/public/stylesheets/style.css
+++ b/sitio/public/stylesheets/style.css
@@ -11,4 +11,5 @@
 @import url('./resultSearch.css');
 @import url('./glider.css');
 @import url('./editPerfil.css');
+@import url('./vistaPerfil.css');
 @import url('./error.css');
