--- a/sitio/public/stylesheets/detail.css
+++ b/sitio/public/stylesheets/detail.css
@@ -14,7 +14,7 @@
 .main .producto-relacionado{
     object-fit: contain;
     width: 100%;
-    height: 250px;
+    height: 100%;
     border:1px solid gray;
 }
 /*  botones de carrusel de productos  */
